--- a/index.html
+++ b/index.html
@@ -6,103 +6,194 @@
   <title>Neon Math Quiz</title>
   <style>
     :root {
-      --bg: #05010d;
-      --card: #0d0221;
+      --bg: #040008;
+      --card: #0b0120;
+      --panel: #12002f;
       --neon1: #00fff7;
       --neon2: #ff00ff;
-      --text: #e6e6ff;
+      --neon3: #7cff00;
+      --text: #f2f2ff;
     }
 
     * { box-sizing: border-box; font-family: 'Segoe UI', system-ui, sans-serif; }
 
     body {
-      margin: 0; min-height: 100vh;
-      background: radial-gradient(circle at top, #12002b, var(--bg));
+      margin: 0;
+      min-height: 100vh;
+      background:
+        radial-gradient(circle at 20% 10%, #1a0040, transparent 40%),
+        radial-gradient(circle at 80% 90%, #002b2b, transparent 40%),
+        var(--bg);
       color: var(--text);
-      display: flex; justify-content: center; align-items: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
-    .container {
-      width: 95%; max-width: 900px;
-      background: var(--card);
-      border-radius: 20px;
-      padding: 24px 20px 32px;
-      box-shadow: 0 0 20px var(--neon2), inset 0 0 15px rgba(0,255,247,0.15);
+    .screen {
+      width: 96%;
+      max-width: 960px;
+      min-height: 90vh;
+      background: linear-gradient(160deg, #070014, #12002f);
+      border-radius: 24px;
+      padding: 26px 22px 34px;
+      box-shadow:
+        0 0 30px rgba(255,0,255,0.35),
+        inset 0 0 25px rgba(0,255,247,0.12);
+      animation: glowPulse 4s infinite alternate;
+    }
+
+    @keyframes glowPulse {
+      from { box-shadow: 0 0 25px rgba(0,255,247,0.25); }
+      to { box-shadow: 0 0 40px rgba(255,0,255,0.45); }
     }
 
     h1 {
-      text-align: center; margin-bottom: 6px;
+      text-align: center;
+      margin: 4px 0 6px;
+      font-size: 2.2rem;
       color: var(--neon1);
-      text-shadow: 0 0 8px var(--neon1), 0 0 16px var(--neon2);
+      text-shadow: 0 0 10px var(--neon1), 0 0 24px var(--neon2);
+      letter-spacing: 1px;
     }
 
     .top-bar {
-      display: flex; justify-content: space-between; align-items: center;
-      margin-bottom: 14px; font-size: 0.95rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 18px 0 26px;
+      padding: 14px 18px;
+      border-radius: 16px;
+      background: linear-gradient(135deg, #0d0130, #18004a);
+      box-shadow: 0 0 15px rgba(0,255,247,0.3);
+    }
+
+    .meta {
+      font-size: 0.95rem;
+      opacity: 0.9;
     }
 
     .timer {
-      padding: 6px 14px; border-radius: 12px;
-      background: #0b0120;
-      box-shadow: 0 0 10px var(--neon1);
-      color: var(--neon1); font-weight: 600;
+      font-size: 1.1rem;
+      font-weight: 700;
+      padding: 10px 20px;
+      border-radius: 20px;
+      background: radial-gradient(circle, #001f1f, #0b0120);
+      color: var(--neon3);
+      box-shadow: 0 0 18px var(--neon3);
+      letter-spacing: 1px;
     }
 
     .question {
-      margin-bottom: 18px; padding: 16px;
-      border-radius: 14px;
-      background: linear-gradient(145deg, #14002f, #0a011a);
-      box-shadow: 0 0 10px rgba(0,255,247,0.15);
+      margin-bottom: 34px;
+      padding: 22px 20px 26px;
+      border-radius: 20px;
+      background: linear-gradient(150deg, #0e0133, #070016);
+      box-shadow:
+        0 0 16px rgba(0,255,247,0.2),
+        inset 0 0 12px rgba(255,0,255,0.12);
     }
 
-    .question h3 { margin: 0 0 10px; font-size: 1.05rem; color: var(--neon1); }
+    .question h3 {
+      margin: 0 0 20px;
+      font-size: 1.15rem;
+      color: var(--neon1);
+      line-height: 1.5;
+    }
 
-    .options { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
+    .options {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 18px 22px; /* BIGGER GAPS */
+    }
 
-    label {
-      cursor: pointer; padding: 10px 12px; border-radius: 10px;
-      background: #0b0120; border: 1px solid rgba(0,255,247,0.25);
-      transition: all 0.25s ease;
+    .opt {
+      position: relative;
     }
 
     input[type=radio] { display: none; }
 
-    label:hover { box-shadow: 0 0 8px var(--neon1); }
+    label {
+      display: block;
+      padding: 18px 18px;
+      border-radius: 16px;
+      background: linear-gradient(145deg, #09001f, #14003f);
+      border: 2px solid rgba(0,255,247,0.25);
+      cursor: pointer;
+      font-size: 1rem;
+      text-align: center;
+      transition: all 0.3s ease;
+    }
+
+    label:hover {
+      transform: translateY(-2px) scale(1.01);
+      box-shadow: 0 0 14px var(--neon1);
+    }
 
     input[type=radio]:checked + label {
-      background: linear-gradient(135deg, #12003a, #1a0055);
-      box-shadow: 0 0 10px var(--neon2);
       border-color: var(--neon2);
+      box-shadow: 0 0 22px var(--neon2);
+      background: linear-gradient(145deg, #1a0055, #22006a);
     }
 
     .submit-btn {
-      margin-top: 24px; width: 100%; padding: 14px;
-      border-radius: 14px; border: none;
-      font-size: 1.1rem; font-weight: 600;
-      color: #05010d;
+      margin-top: 40px;
+      width: 100%;
+      padding: 18px;
+      border-radius: 20px;
+      border: none;
+      font-size: 1.2rem;
+      font-weight: 700;
+      color: #040008;
       background: linear-gradient(90deg, var(--neon1), var(--neon2));
-      cursor: pointer; box-shadow: 0 0 15px var(--neon1);
+      cursor: pointer;
+      box-shadow: 0 0 26px var(--neon1);
+      letter-spacing: 1px;
     }
 
-    .result {
-      display: none; margin-top: 20px; text-align: center;
-      font-size: 1.2rem; color: var(--neon1);
+    /* ---------- RESULT SCREEN ---------- */
+    .result-screen {
+      display: none;
+      text-align: center;
+      padding: 60px 20px;
     }
 
-    @media (max-width: 600px) { .options { grid-template-columns: 1fr; } }
+    .score {
+      font-size: 3rem;
+      margin-bottom: 20px;
+      color: var(--neon3);
+      text-shadow: 0 0 25px var(--neon3);
+    }
+
+    .remark {
+      font-size: 1.3rem;
+      opacity: 0.9;
+    }
+
+    @media (max-width: 700px) {
+      .options { grid-template-columns: 1fr; gap: 22px; }
+      h1 { font-size: 1.8rem; }
+    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>⚡ Neon Math Quiz ⚡</h1>
+  <!-- QUIZ SCREEN -->
+  <div class="screen" id="quizScreen">
+    <h1>⚡ Neon Math Challenge ⚡</h1>
     <div class="top-bar">
-      <div>20 Questions • Auto-submit</div>
+      <div class="meta">20 Random Questions • Auto Submit</div>
       <div class="timer" id="timer">20:00</div>
     </div>
 
     <form id="quizForm"></form>
-    <button class="submit-btn" onclick="submitQuiz()">Submit Quiz</button>
-    <div class="result" id="result"></div>
+    <button class="submit-btn" onclick="submitQuiz(false)">SUBMIT QUIZ</button>
+  </div>
+
+  <!-- RESULT SCREEN (NEXT PAGE FEEL) -->
+  <div class="screen result-screen" id="resultScreen">
+    <h1>📊 Quiz Result</h1>
+    <div class="score" id="scoreText"></div>
+    <div class="remark" id="remark"></div>
   </div>
 
 <script>
@@ -113,31 +204,32 @@ document.addEventListener('keydown', e => {
   if ((e.ctrlKey && ['t','n','w'].includes(e.key.toLowerCase())) || e.key === 'F12') e.preventDefault();
 });
 
-/* ---------- Timer (20 Minutes) ---------- */
-let timeLeft = 20 * 60; // seconds
-let timerInterval = setInterval(() => {
-  const min = String(Math.floor(timeLeft / 60)).padStart(2,'0');
-  const sec = String(timeLeft % 60).padStart(2,'0');
-  document.getElementById('timer').innerText = `${min}:${sec}`;
+/* ---------- Timer ---------- */
+let timeLeft = 20 * 60;
+const timerEl = document.getElementById('timer');
+const timer = setInterval(() => {
+  const m = String(Math.floor(timeLeft / 60)).padStart(2,'0');
+  const s = String(timeLeft % 60).padStart(2,'0');
+  timerEl.innerText = `${m}:${s}`;
   if (timeLeft <= 0) {
-    clearInterval(timerInterval);
+    clearInterval(timer);
     submitQuiz(true);
   }
   timeLeft--;
 }, 1000);
 
-/* ---------- Quiz Logic ---------- */
+/* ---------- Quiz Generation ---------- */
 const quizForm = document.getElementById('quizForm');
 const answers = [];
 
-function shuffle(arr){ return arr.sort(() => Math.random() - 0.5); }
+function shuffle(a){ return a.sort(() => Math.random() - 0.5); }
 
 function addQuestion(text, correct){
   const opts = shuffle([
     correct,
-    correct + Math.floor(Math.random()*10+1),
-    correct - Math.floor(Math.random()*10+1),
-    correct + Math.floor(Math.random()*20+5)
+    correct + Math.floor(Math.random()*10+2),
+    correct - Math.floor(Math.random()*10+2),
+    correct + Math.floor(Math.random()*25+5)
   ]);
   const i = answers.length;
   answers.push(correct);
@@ -145,36 +237,38 @@ function addQuestion(text, correct){
   q.className = 'question';
   q.innerHTML = `<h3>Q${i+1}. ${text}</h3><div class="options">` +
     opts.map((o,j)=>`
-      <div><input type="radio" name="q${i}" id="q${i}_${j}" value="${o}"><label for="q${i}_${j}">${o}</label></div>`).join('') +
+      <div class="opt"><input type="radio" name="q${i}" id="q${i}_${j}" value="${o}"><label for="q${i}_${j}">${o}</label></div>`).join('') +
     '</div>';
   quizForm.appendChild(q);
 }
 
-/* ---- Generate 20 Random Questions ---- */
 const generators = [
   () => { const a = Math.floor(Math.random()*14)+12; const b = Math.floor(Math.random()*20)+1; return [`${a} × ${b} = ?`, a*b]; },
   () => { const n = Math.floor(Math.random()*21)+10; return [`${n}² = ?`, n*n]; },
   () => { const n = Math.floor(Math.random()*21)+10; return [`${n}³ = ?`, n*n*n]; }
 ];
 
-shuffle([...Array(20).keys()]).forEach(()=>{
+for(let i=0;i<20;i++){
   const g = generators[Math.floor(Math.random()*generators.length)];
   const [q,a] = g(); addQuestion(q,a);
-});
+}
 
-/* ---------- Submit ---------- */
-function submitQuiz(auto=false){
-  clearInterval(timerInterval);
+/* ---------- Submit & Next Screen ---------- */
+function submitQuiz(auto){
+  clearInterval(timer);
   let score = 0;
   answers.forEach((a,i)=>{
     const s = document.querySelector(`input[name=q${i}]:checked`);
     if(s && Number(s.value) === a) score++;
   });
-  document.getElementById('result').style.display='block';
-  document.getElementById('result').innerText = auto
-    ? `⏰ Time's up! Score: ${score} / 20`
-    : `🎯 Your Score: ${score} / 20`;
-  window.scrollTo({top: document.body.scrollHeight, behavior:'smooth'});
+
+  document.getElementById('quizScreen').style.display='none';
+  document.getElementById('resultScreen').style.display='block';
+
+  document.getElementById('scoreText').innerText = `${score} / 20`;
+  document.getElementById('remark').innerText = auto
+    ? '⏰ Time is up!'
+    : score >= 15 ? '🔥 Excellent performance' : score >= 8 ? '⚡ Good effort' : '💡 Keep practicing';
 }
 </script>
 </body>
